test/test-files/analyzer/methods/error-method-before-struct/exception.out
Semantic error in : ./test-files/analyzer/methods/error-method-before-struct/source.spice:1:1:
Referenced undefined struct: Struct 'Vec' could not be found

1  public p Vec.print() {
   ^^^^^^^^^^^^^^^^^^^^^^